RESOLVED FIXED211373
Camera video samples have a bad orientation if upside down
https://bugs.webkit.org/show_bug.cgi?id=211373
Summary Camera video samples have a bad orientation if upside down
youenn fablet
Reported 2020-05-04 03:29:46 PDT
Camera video samples have a bad orientation if upside down
Attachments
Patch (1.66 KB, patch)
2020-05-04 03:31 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2020-05-04 03:31:13 PDT
Radar WebKit Bug Importer
Comment 2 2020-05-04 03:31:46 PDT
EWS
Comment 3 2020-05-04 07:13:28 PDT
Committed r261080: <https://trac.webkit.org/changeset/261080> All reviewed patches have been landed. Closing bug and clearing flags on attachment 398359 [details].
Eric Carlson
Comment 4 2020-05-26 11:08:56 PDT
*** Bug 203403 has been marked as a duplicate of this bug. ***
Eric Carlson
Comment 5 2020-07-10 13:13:14 PDT
*** Bug 213993 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.