Camera video samples have a bad orientation if upside down https://bugs.webkit.org/show_bug.cgi?id=211373

Reviewed by Eric Carlson.

Manually tested on iPad and iPhones.

* platform/mediastream/mac/AVVideoCaptureSource.mm:
(WebCore::AVVideoCaptureSource::computeSampleRotation):
-90 should be the same as 270 not -270.


Canonical link: https://commits.webkit.org/224255@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261080 268f45cc-cd09-0410-ab3c-d52691b4dbfc